lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:4: error: type mismatch;
 found   : Unit
 required: lessons.lander.universe.Segment
}
^